--- a/index.html
+++ b/index.html
@@ -3,9 +3,77 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iris - IIT Madras</title>
     <link rel="stylesheet" href="styles.css" />
-    <script defer src="script.js"></script>
+    <script defer src="script.js" /> </script>
+    <title>Image Gallery</title>
   </head>
-  <body></body>
+  <body>
+    <form action="">
+        <select name="year" id="year" >
+            <!-- <option value="2023">2023</option>
+            <option value="2024">2024</option> -->
+        </select>
+        <select name="month" id="month">
+            <!-- <option value="jan">January</option>
+            <option value="feb">February</option>
+            <option value="mar">March</option>
+            <option value="apr">April</option>
+            <option value="may">May</option>
+            <option value="jun">June</option>
+            <option value="jul">July</option>
+            <option value="aug">August</option>
+            <option value="sep">September</option>
+            <option value="oct">October</option>
+            <option value="nov">November</option>
+            <option value="dec">December</option> -->
+        </select>
+        <button name="submit" id="show-photos">Show</button>
+    </form>
+    <div class="day-name-container">
+        <h3 class="day-name">Sunday</h3>
+        <h3 class="day-name">Monday</h3>
+        <h3 class="day-name">Tuesday</h3>
+        <h3 class="day-name">Wednesday</h3>
+        <h3 class="day-name">Thursday</h3>
+        <h3 class="day-name">Friday</h3>
+        <h3 class="day-name">Saturday</h3>
+    </div>
+    <div class="gallery">
+        <!-- <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div>
+        <div class="day"></div> -->
+    </div>
+  </body>
 </html>
