--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js" /> </script>
     <title>Image Gallery</title>
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
   </head>
   <body>
     <form action="">
@@ -74,6 +79,25 @@
         <div class="day"></div>
         <div class="day"></div>
         <div class="day"></div> -->
+    </div>
+    <div class="image-modal hidden">
+      <img src="" alt="" class="big-image" ></img>
+      <div class="image-details-pane">
+        <span id="close-modal">X</span>
+        <div class="image-details">
+          <!-- <span class="image-title">${title}</span>
+          <cite class="photographer-name">by ${photographer}</cite>
+          <p class="image-caption dm-mono-light">${caption}</p>
+          <div class="insta">
+            <a href=${insta} target="_blank">Follow ${photographer} on 
+              <span class="instagram-icon"> 
+                <img src="/images/insta-icon.png" height="16px"> 
+                Instagram
+              </span>
+            </a>
+          </div>   -->
+        </div>
+      </div>
     </div>
   </body>
 </html>
