--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <form action="">
+        <h1 style="color:white; font-size: 30px;"><span style="color:rgb(226, 43, 208); font-size: 30px" >IRIS</span> Photo of the Day</h1>
         <select name="year" id="year" >
             <!-- <option value="2023">2023</option>
             <option value="2024">2024</option> -->
@@ -99,5 +100,6 @@
         </div>
       </div>
     </div>
+    <footer>Made by <a href="https://instagram.com/kaustubhismyname" target="_blank">Kaustubh</a></footer>
   </body>
 </html>
