modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <form action="">
-        <h1 style="color:white; font-size: 30px;"><span style="color:rgb(226, 43, 208); font-size: 30px" >IRIS</span> Photo of the Day</h1>
+        <h1 style="color:white; font-size: 30px; display: block; width: 100%"><span style="color:rgb(226, 43, 208); font-size: 30px; display: block; width: 100%;" >IRIS</span> Photos of the Day Collection</h1>
         <select name="year" id="year" >
             <!-- <option value="2023">2023</option>
             <option value="2024">2024</option> -->
@@ -100,6 +100,11 @@
         </div>
       </div>
     </div>
-    <footer>Made by <a href="https://instagram.com/kaustubhismyname" target="_blank">Kaustubh</a></footer>
+    <footer>
+      <ul>
+        <li>Follow IRIS on Instagram - <a href="https://instagram.com/iris_iitm">iris_iitm</a></li>
+        <li>Made with passion by <a href="https://instagram.com/kaustubhismyname" target="_blank">Kaustubh</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
