--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js" /> </script>
     <title>Image Gallery</title>
-    
+    <link rel="icon" href="/images/iris_icon.png" ">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
   </head>
   <body>
     <form action="">
-        <h1 style="color:white; font-size: 30px; display: block; width: 100%"><span style="color:rgb(226, 43, 208); font-size: 30px; display: block; width: 100%;" >IRIS</span> Photos of the Day Collection</h1>
+        <h1 style="color:white; font-size: 30px;  width: 100%"><img src="/images/iris_icon.png" alt="" id="iris-logo" style="height: 40px; position: relative; top:10px; margin-right: 5px"><span style="color:rgb(226, 43, 208); font-size: 30px;  width: 100%;" >IRIS</span> Photos of the Day Collection</h1>
         <select name="year" id="year" >
             <!-- <option value="2023">2023</option>
             <option value="2024">2024</option> -->
@@ -102,8 +102,8 @@
     </div>
     <footer>
       <ul>
-        <li>Follow IRIS on Instagram - <a href="https://instagram.com/iris_iitm">iris_iitm</a></li>
-        <li>Made with passion by <a href="https://instagram.com/kaustubhismyname" target="_blank">Kaustubh</a></li>
+        <li>Follow IRIS on Instagram - <a href="https://instagram.com/iris_iitm"> <img src="/images/insta-icon.png" style="height: 16px;"  alt="">  iris_iitm</a></li>
+        <li>Made with passion by <a href="https://instagram.com/kaustubhismyname" target="_blank"> <img src="/images/insta-icon.png" style="height: 16px;"  alt="">  Kaustubh</a></li>
       </ul>
     </footer>
   </body>
