--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         <li>Follow IRIS on Instagram - <a href="https://instagram.com/iris_iitm"> <img src="/images/insta-icon.png" style="height: 16px;"  alt="">  iris_iitm</a></li>
         <li>Made with passion by <a href="https://instagram.com/kaustubhismyname" target="_blank"> <img src="/images/insta-icon.png" style="height: 16px;"  alt="">  Kaustubh</a></li>
       </ul>
+      The logo used on the website is the property of IRIS Photography Society of IITM 
     </footer>
   </body>
 </html>
