changed title:   index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js" /> </script>
-    <title>Image Gallery</title>
+    <title>IRIS: Photos of the Day</title>
     <link rel="icon" href="/images/iris_icon.png" ">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
